--- a/formavancado/index.html
+++ b/formavancado/index.html
@@ -1,103 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Mentoria</title>
-
+    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&family=Staatliches&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="style.css" />
+    <title>Avalie sua Mentoria</title>
   </head>
   <body>
-    <div class="page">
-      <header>
-        <h1>Avalie Sua Mentoria</h1>
+    <header>
+      <div class="container-header">
+        <h1>avalie a sua mentoria</h1>
         <p>Chegou a hora de avaliar o seu mentor. Bora lá?</p>
         <img
-          src="img.svg"
-          alt="balão laranja com 5 estrelas e 3 delas em branco"
+          src="./img.svg"
+          alt="balão laranja com 5 estrelas, sendo que 3 delas são brancas"
         />
-        <div class="top">
-          <h2>Informações Pessoais</h2>
-        </div>
-        <form id="my-form">
-          <div class="wrapper">
-            <fieldset class="fieldset-wrapper">
-              <div class="col-2">
-                <div class="input-wrapper">
-                  <label for="name">Nome</label>
-                  <input type="text" id="name" />
-                </div>
-                <div class="input-wrapper">
-                  <label for="lastname">Sobrenome</label>
-                  <input type="text" id="lastname" />
-                </div>
-              </div>
-
-              <div class="input-wrapper">
-                <label for="email"
-                  >Email <span>(digite um email válido)</span></label
-                >
-                <input type="email" id="email" />
-              </div>
-            </fieldset>
-
-            <fieldset class="fieldset-wrapper">
-              <legend>Informações do Mentor</legend>
-              <div class="input-wrapper">
-                <label for="menthor-name"
-                  >Selecione quem foi o seu mentor</label
-                >
-                <input type="text" id="menthor-name" />
-              </div>
-
-              <div class="input-wrapper">
-                <label for="feedback">Feedback sobre o mentor</label>
-                <input type="text" id="feedback" />
-              </div>
-
-              <div class="input-wrapper">
-                <input type="checkbox" id="doubts" />
-                <label for="doubts"
-                  >Todas as minhas dúvidas foram esclarecidas durante a
-                  mentoria</label
-                >
-              </div>
-            </fieldset>
-
-            <fieldset class="fieldset-wrapper">
-              <legend>Agendando Próxima Mentoria</legend>
-              <div class="col-3">
-                <div class="input-wrapper">
-                  <label for="event-date">Data</label>
-                  <input type="date" id="event-date" />
-                </div>
-
-                <div class="input-wrapper">
-                  <label for="event-begin">Das</label>
-                  <input type="time" id="event-begin" />
-                </div>
-
-                <div class="input-wrapper">
-                  <label for="event-end">Até</label>
-                  <input type="time" id="event-end" />
-                </div>
-              </div>
-            </fieldset>
-
-            <footer>
-              <button class="button" form="my-form">Salvar</button>
-            </footer>
+      </div>
+      <div class="form-top">
+        <p>Informações pessoais</p>
+      </div>
+    </header>
+    <form id="my-form">
+      <fieldset>
+        <div class="inline-wrapper">
+          <div class="input-wrapper input-group-name">
+            <label for="name">Nome</label>
+            <input type="text" id="name" />
           </div>
-        </form>
-      </header>
-    </div>
+
+          <div class="input-wrapper input-group-name">
+            <label for="lastname">Sobrenome</label>
+            <input type="text" id="lastname" />
+          </div>
+        </div>
+
+        <div class="input-wrapper">
+          <label for="email">E-mail<span>(digite um email válido)</span></label>
+          <input type="email" id="email" />
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <legend>Informações do mentor</legend>
+
+        <div class="input-wrapper">
+          <label for="mentor">Selecione quem foi o seu mentor</label>
+          <select id="mentor">
+            <option type="hidden" selected></option>
+            <option value="mentor1">Mentor a</option>
+            <option value="mentor2">Mentor b</option>
+            <option value="mentor3">Mentor c</option>
+          </select>
+        </div>
+
+        <div class="input-wrapper">
+          <label for="feedback-mentor">Feedback sobre o mentor</label>
+          <textarea id="feedback-mentor"></textarea>
+        </div>
+
+        <div class="checkbox-wrapper">
+          <input type="checkbox" id="rating-mentorship" />
+          <label for="rating-mentorship"
+            >Todas as minhas dúvidas foram esclarecidas durante a
+            mentoria.</label
+          >
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <div class="fieldset-wrapper">
+          <legend>Agendando próxima mentoria</legend>
+
+          <div class="inline-wrapper">
+            <div class="input-wrapper input-data">
+              <label for="event-date">Data<span>(DD/MM/AAAA)</span></label>
+              <input type="date" id="event-date" />
+            </div>
+
+            <div class="input-wrapper">
+              <label for="event-begin">Das</label>
+              <input type="time" id="event-begin" />
+            </div>
+
+            <div class="input-wrapper">
+              <label for="event-end">Até</label>
+              <input type="time" id="event-end" />
+            </div>
+          </div>
+        </div>
+      </fieldset>
+      <button form="my-form">Salvar</button>
+    </form>
   </body>
 </html>
